--- a/pom.xml
+++ b/pom.xml
@@ -61,6 +61,42 @@
       <artifactId>activemq-all</artifactId>
       <version>5.9.0</version>
       </dependency>
+      <!--poi生成ms office文档-->
+      <dependency>
+          <groupId>org.apache.poi</groupId>
+          <artifactId>poi</artifactId>
+          <version>3.17</version>
+      </dependency>
+      <dependency>
+          <groupId>org.apache.poi</groupId>
+          <artifactId>poi-ooxml</artifactId>
+          <version>3.16</version>
+      </dependency>
+      <dependency>
+          <groupId>org.apache.poi</groupId>
+          <artifactId>poi-ooxml-schemas</artifactId>
+          <version>3.16</version>
+      </dependency>
+      <dependency>
+          <groupId>org.apache.poi</groupId>
+          <artifactId>ooxml-schemas</artifactId>
+          <version>1.3</version>
+      </dependency>
+      <!-- https://mvnrepository.com/artifact/org.apache.poi/ooxml-security -->
+      <dependency>
+          <groupId>org.apache.poi</groupId>
+          <artifactId>ooxml-security</artifactId>
+          <version>1.1</version>
+      </dependency>
+
+
+
+      <!--pdf文件相关-->
+      <dependency>
+          <groupId>com.lowagie</groupId>
+          <artifactId>itext</artifactId>
+          <version>2.1.5</version>
+      </dependency>
   </dependencies>
 
   <build>
